@@ -14,6 +14,7 @@
 * map05: Endboss verursacht nun Schaden bei Berührung
 * map03: Nebel Effekt Performance optimiert
 * Global: Geschwindigkeit der Gesundheitsregeneration nun abhängig vom Schwierigkeitsgrad
+* Hauptmenü: Neue Buttons "Kampagne" und "Horde Modus"
 
 # Alpha 019 (20.09.2024)
 
